# leaf

./: README.md  pyproject.toml  tests.py
files/directory/directory2/: dir_test3.txt
src/: example.py
src/leaf/: __init__.py  exception.py  filesystem.py
src/tests/: tests.py
